--- a/conclusion.html
+++ b/conclusion.html
@@ -1,52 +1,56 @@
 <!DOCTYPE html>
 <html lang = "fr">
-    <head>
-        <title>BIGdata</title>
-        <meta charset="utf-8">
-        <meta name="author" content="BENTAHAR SANGARE">
-        <meta name="description" content="l'accueil de notre site">
-        <meta name="keywords" content="td1">
-        <link rel="icon" type="image/png" href="./images/bd3.png">
-        <link rel="stylesheet" href="styles.css">
-    
-    </head>
-    <body>
-        <header>
-            <nav>
-                <h1>BIGdata</h1>
-                <ul>
-                    <li><a href="./index.html">Accueil</a></li>
-                    <li><a href="./definition.html">Définition</a></li>
-                    <li><a href="./langages.html">Langages</a></li>
-                    <li><a href="./utilites.html">Utilités</a></li>
-                    <li><a href="./conclusion.html">Conclusion</a></li>
-                    
-                </ul>
-            </nav>
-            <img src="./images/bigdataAccueil2.png" alt="image accueil" width="150" height="150">
-            <img src="./images/cyLogo2.png" alt="logo cergy université" width="150" height="150">
-        </header>
-    <main>
-        <h2>Conclusion</h2>
-        <p class="mod">
-            En conclusion, le Big Data représente une avancée technologique majeure qui transforme profondément la manière dont les données sont collectées, analysées et exploitées dans presque tous les secteurs.
-             Sa capacité à traiter des volumes colossaux de données en temps réel permet aux entreprises, aux gouvernements et aux chercheurs de prendre des décisions plus éclairées et stratégiques. 
-             Que ce soit pour personnaliser des services, optimiser des processus ou innover dans des domaines tels que la santé, les transports ou l’environnement, le Big Data est devenu un levier indispensable pour relever les défis du monde moderne.
-
-Cependant, cette révolution numérique s’accompagne de défis importants. La protection des données personnelles, la transparence dans l’utilisation des informations et la gestion des biais algorithmiques sont autant d’enjeux à relever pour garantir une utilisation éthique et équitable de ces technologies. Si ces obstacles sont surmontés, le Big Data continuera à jouer un rôle essentiel dans la construction d’un avenir plus efficace, connecté et durable.
-        </p>
-        <section>
-        </section>
-    </main>
-    <footer>
-        <section id="contacter">
-        <h3>Nous contacter :<br></h3>
-        <p>marwan.bentahar@etu.cyu.fr<br>benoit.sangare@etu.cyu.fr<br></p>
-        </section>
-        <section id="date">
-        <label>Dernière modification:</label>
-        <input type="date" name="date de modification" value="2025-01-30">
-        </section>
-    </footer>
-</body>
+   <head>
+      <title>BIGdata</title>
+      <meta charset="utf-8"/>
+      <meta name="author" content="BENTAHAR SANGARE"/>
+      <meta name="description" content="Explication des bigdata"/>
+      <meta name="keywords" content="td1"/>
+      <link rel="icon" type="image/png" href="./images/bd3.png"/>
+      <link rel="stylesheet" href="styles.css"/>
+   </head>
+   <body>
+      <header>
+         <nav>
+            <h1><a href="./index.html">BIGdata</a></h1>
+            <ul class="nav-menu">
+               <li><a href="./index.html">Accueil</a></li>
+               <li><a href="./definition.html">Définition</a></li>
+               <li><a href="./langages.html">Langages</a></li>
+               <li><a href="./utilites.html">Utilités</a></li>
+               <li><a href="./conclusion.html">Conclusion</a></li>
+            </ul>
+         </nav>
+         <img src="./images/bigdataAccueil2.png" alt="image accueil" width="150" height="150"/>
+         <img src="./images/cyLogo2.png" alt="logo cergy université" width="150" height="150"/>
+      </header>
+      <main>
+         <h2>Conclusion</h2>
+         <p class="mod">
+            En conclusion, le Big Data représente <strong> une avancée technologique majeure</strong> qui transforme profondément la manière dont les données sont collectées, analysées et exploitées dans presque tous les secteurs.
+            Sa capacité à traiter des volumes colossaux de données en temps réel permet aux entreprises, aux gouvernements et aux chercheurs de prendre des décisions plus éclairées et stratégiques. 
+            Que ce soit pour personnaliser des services, optimiser des processus ou innover dans des domaines tels que la santé, les transports ou l’environnement, le Big Data est devenu un levier indispensable pour relever les défis du monde moderne.
+            Cependant, cette révolution numérique s’accompagne de défis importants. La protection des données personnelles, la transparence dans l’utilisation des informations et la gestion des biais algorithmiques sont autant d’enjeux à relever pour garantir une utilisation éthique et équitable de ces technologies. Si ces obstacles sont surmontés, le Big Data continuera à jouer un rôle essentiel dans la construction d’un avenir plus efficace, connecté et durable.
+         </p>
+         <br/><h2 class="tde">
+            Liens utiles :
+         </h2>
+         <br/><p>
+Reportage sur le BigData :     <a href="https://www.maddyness.com/emission/emission-big-data-society-documentaire/" target="_blank"> Reportage</a>
+<br/>Interêt du BigData pour les entreprises : <a href="https://blog.ostraca.fr/blog/quel-est-linteret-du-big-data-pour-les-entreprises/"> Interêt</a>
+<br/>Site pour langages de programmation liés au BigData : <a href="https://www.saagie.com/fr/blog/top-5-langage-programmation-big-data/"> Langages</a>
+         </p>
+      </main>
+      <footer>
+         <section id="contacter">
+            <h3>Nous contacter :<br/></h3>
+            <p>marwan.bentahar@etu.cyu.fr<br/>benoit.sangare@etu.cyu.fr<br/></p>
+         </section>
+         <section id="date">
+            <h3>Date :<br/></h3>
+            <label>Dernière modification:</label>
+            <input type="date" name="date de modification" value="2025-01-30" />
+         </section>
+      </footer>
+   </body>
 </html>
