--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang = "fr">
+<html lang="fr">
    <head>
       <title>BIGdata</title>
       <meta charset="utf-8"/>
@@ -9,7 +9,7 @@
       <link rel="icon" type="image/png" href="./images/bd3.png"/>
       <link rel="stylesheet" href="styles.css"/>
    </head>
-   <body>
+   <body id="top">
       <header>
          <nav>
             <h1><a href="./index.html">BIGdata</a></h1>
@@ -28,25 +28,38 @@
          <h2>Accueil</h2>
          <section id="acceuilDef">
             <h3>Big Data</h3>
-            <p>Désigne l'ensemble des données massives et complexes, souvent non structurées, qui nécessitent des outils et des technologies 
-               spécifiques pour être stockées, traitées et analysées efficacement.
-               Cela permet d'extraire des informations pertinse de décisions dans divers domaines.
+            <p>
+               Désigne l'ensemble des données massives et complexes, souvent non structurées,
+               qui nécessitent des outils et des technologies spécifiques pour être stockées,
+               traitées et analysées efficacement. Cela permet d'extraire des informations 
+               pertinentes pour la prise de décisions dans divers domaines. Le Big Data est
+               utilisé dans des secteurs tels que la santé, la finance, et le marketing,
+               afin d'améliorer les processus décisionnels. Son exploitation permet également
+               de découvrir des tendances cachées et de prédire des comportements futurs.
             </p>
          </section>
-         <video controls loop autoplay muted width="420">
+         <video controls="controls" loop="loop" autoplay="autoplay" muted="muted" width="385">
             <source src="./videos/dataOrange.mp4" type="video/mp4"/>
-            Votre navigateur ne supporte pas la balise vidéo.
+               Votre navigateur ne supporte pas la balise vidéo.
          </video>
+
       </main>
       <footer>
          <section id="contacter">
             <h3>Nous contacter :<br/></h3>
-            <p>marwan.bentahar@etu.cyu.fr<br/>benoit.sangare@etu.cyu.fr<br/></p>
+            <p>
+               marwan.bentahar@etu.cyu.fr<br/>
+               benoit.sangare@etu.cyu.fr<br/>
+            </p>
+         </section>
+         <section id="hautDePage">
+            <h3>Retour en haut de la page</h3>
+            <a href="#top">#</a>
          </section>
          <section id="date">
             <h3>Date :<br/></h3>
             <label>Dernière modification:</label>
-            <input type="date" name="date de modification" value="2025-01-30" />
+            <input type="date" name="date de modification" value="2025-02-06" />
          </section>
       </footer>
    </body>
