--- a/langages.html
+++ b/langages.html
@@ -9,7 +9,8 @@
       <link rel="icon" type="image/png" href="./images/bd3.png"/>
       <link rel="stylesheet" href="styles.css"/>
    </head>
-   <body>
+   <body id="top">
+   <header>   
       <nav>
          <h1><a href="./index.html">BIGdata</a></h1>
          <ul class="nav-menu">
@@ -22,7 +23,7 @@
       </nav>
       <img src="./images/bigdataAccueil2.png" alt="image accueil" width="150" height="150"/>
       <img src="./images/cyLogo2.png" alt="logo cergy université" width="150" height="150"/>
-      </header>
+   </header>
       <main>
          <h2>Langages</h2>
          <section>
@@ -103,12 +104,19 @@
       <footer>
          <section id="contacter">
             <h3>Nous contacter :<br/></h3>
-            <p>marwan.bentahar@etu.cyu.fr<br/>benoit.sangare@etu.cyu.fr<br/></p>
+            <p>
+               marwan.bentahar@etu.cyu.fr<br/>
+               benoit.sangare@etu.cyu.fr<br/>
+            </p>
+         </section>
+         <section id="hautDePage">
+            <h3>Retour en haut de la page</h3>
+            <a href="#top">#</a>
          </section>
          <section id="date">
             <h3>Date :<br/></h3>
             <label>Dernière modification:</label>
-            <input type="date" name="date de modification" value="2025-01-30" />
+            <input type="date" name="date de modification" value="2025-02-06" />
          </section>
       </footer>
    </body>
