--- a/conclusion.html
+++ b/conclusion.html
@@ -9,7 +9,7 @@
       <link rel="icon" type="image/png" href="./images/bd3.png"/>
       <link rel="stylesheet" href="styles.css"/>
    </head>
-   <body>
+   <body id="top">
       <header>
          <nav>
             <h1><a href="./index.html">BIGdata</a></h1>
@@ -33,23 +33,33 @@
             Cependant, cette révolution numérique s’accompagne de défis importants. La protection des données personnelles, la transparence dans l’utilisation des informations et la gestion des biais algorithmiques sont autant d’enjeux à relever pour garantir une utilisation éthique et équitable de ces technologies. Si ces obstacles sont surmontés, le Big Data continuera à jouer un rôle essentiel dans la construction d’un avenir plus efficace, connecté et durable.
          </p>
          <br/><h2 class="tde">
-            Liens utiles :
+            Liens utiles
          </h2>
          <br/><p>
-Reportage sur le BigData :     <a href="https://www.maddyness.com/emission/emission-big-data-society-documentaire/" target="_blank"> Reportage</a>
+Reportage sur le BigData : <a href="https://www.maddyness.com/emission/emission-big-data-society-documentaire/" target="_blank"> Reportage</a>
 <br/>Interêt du BigData pour les entreprises : <a href="https://blog.ostraca.fr/blog/quel-est-linteret-du-big-data-pour-les-entreprises/"> Interêt</a>
 <br/>Site pour langages de programmation liés au BigData : <a href="https://www.saagie.com/fr/blog/top-5-langage-programmation-big-data/"> Langages</a>
+<br/>codegym.cc : <a href="https://codegym.cc/fr/groups/posts/fr.278.java-et-big-data-pourquoi-les-projets-big-data-ne-peuvent-pas-se-passer-de-java#group-member-panel-btn">Mégadonnées et Java</a>
+<br/>Fichier PDF expliquant les bigdata : <a href="./fichiers/bigdata.pdf" target="_blank"> bigdata.pdf</a>
+
          </p>
       </main>
       <footer>
          <section id="contacter">
             <h3>Nous contacter :<br/></h3>
-            <p>marwan.bentahar@etu.cyu.fr<br/>benoit.sangare@etu.cyu.fr<br/></p>
+            <p>
+               marwan.bentahar@etu.cyu.fr<br/>
+               benoit.sangare@etu.cyu.fr<br/>
+            </p>
+         </section>
+         <section id="hautDePage">
+            <h3>Retour en haut de la page</h3>
+            <a href="#top" >#</a>
          </section>
          <section id="date">
             <h3>Date :<br/></h3>
             <label>Dernière modification:</label>
-            <input type="date" name="date de modification" value="2025-01-30" />
+            <input type="date" name="date de modification" value="2025-02-06" />
          </section>
       </footer>
    </body>
