--- a/utilites.html
+++ b/utilites.html
@@ -9,7 +9,7 @@
       <link rel="icon" type="image/png" href="./images/bd3.png"/>
       <link rel="stylesheet" href="styles.css"/>
    </head>
-   <body>
+   <body id="top">
       <header>
          <nav>
             <h1><a href="./index.html">BIGdata</a></h1>
@@ -41,8 +41,9 @@
             Dans les domaines de la sécurité publique et de l’environnement, le Big Data est un outil précieux. Les gouvernements et les organisations utilisent des données en temps réel pour surveiller les catastrophes naturelles, prévoir les besoins en énergie et même combattre la criminalité grâce à des analyses prédictives. En combinant des données provenant de capteurs, de satellites et de réseaux sociaux, il est possible de développer des solutions innovantes pour rendre les villes plus intelligentes et durables.
             
             Ainsi, le Big Data transforme notre société en profondeur, offrant de nouvelles opportunités tout en soulevant des défis majeurs. Son évolution continue façonnera les industries et les modes de vie de demain.
-         <img class="img" src="./images/point.jpg" alt="point d'interrogation" width="130" height="130"/>
-         <img class="imgd" src="https://www.gifsanimes.com/data/media/1215/engrenage-image-animee-0001.gif" alt="engrenage-image-animee-0001" /></a>
+         </p>
+         <img class="img" src="./images/point.jpg" alt="point d'interrogation" width="100" height="100"/>
+         <img class="imgd" src="https://www.gifsanimes.com/data/media/1215/engrenage-image-animee-0001.gif" alt="engrenage-image-animee-0001" />
         
          <a href="https://youtu.be/an86433PT8Q?si=sSXrcbbBhOunx4HT"><br/>
              Video explicative <br/></a>
@@ -50,12 +51,19 @@
       <footer>
          <section id="contacter">
             <h3>Nous contacter :<br/></h3>
-            <p>marwan.bentahar@etu.cyu.fr<br/>benoit.sangare@etu.cyu.fr<br/></p>
+            <p>
+               marwan.bentahar@etu.cyu.fr<br/>
+               benoit.sangare@etu.cyu.fr<br/>
+            </p>
+         </section>
+         <section id="hautDePage">
+            <h3>Retour en haut de la page</h3>
+            <a href="#top">#</a>
          </section>
          <section id="date">
             <h3>Date :<br/></h3>
             <label>Dernière modification:</label>
-            <input type="date" name="date de modification" value="2025-01-30" />
+            <input type="date" name="date de modification" value="2025-02-06" />
          </section>
       </footer>
    </body>
